# simple-c-logging

./: README.md  logs.c  logs.h
example/: CMakeLists.txt  logs.c  logs.h  main.c
